--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./css/all.css">
   <link rel="stylesheet" href="./css/main.css">
   <title>Inicio</title>
 </head>
 <body>
-  
+  <ul class="menu">
+    <li><a href="#"></a></li>
+  </ul>
 </body>
 </html>
