--- a/index.html
+++ b/index.html
@@ -1,15 +1,45 @@
 <!DOCTYPE html>
-<html lang="e">
+<html lang="es">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./css/all.css">
   <link rel="stylesheet" href="./css/main.css">
   <title>Inicio</title>
 </head>
 <body>
   <ul class="menu">
-    <li><a href="#"></a></li>
+    <li class='menu-selected'>
+      <a href="#">
+        <i class="fas fa-home"></i>
+        <span>Inicio</span>
+      </a>
+    </li>
+    <li>
+      <a href="#">
+        <i class="fas fa-calendar"></i>
+        <span>Reto Diario</span>
+      </a>
+    </li>
+    <li>
+      <a href="#">
+        <i class="fas fa-trophy"></i>
+        <span>Trofeos</span>
+      </a>
+    </li>
+    <li>
+      <a href="#">
+        <i class="fas fa-cog"></i>
+        <span>Ajustes</span>
+      </a>
+    </li>
+    <li>
+      <a href="#">
+        <i class="fas fa-user"></i>
+        <span>Personal</span>
+      </a>
+    </li>
   </ul>
 </body>
 </html>
