--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <title>Inicio</title>
 </head>
 <body>
+
+  <!--Menu-->
   <ul class="menu">
     <li class='menu-selected'>
       <a href="#">
@@ -41,5 +43,20 @@
       </a>
     </li>
   </ul>
+
+  <!--Recomendado-->
+  <div class='modo-recomendado'>
+    <div class="reto reto-diario">
+      <h3 class="titulo-reto">Reto Diario</h3>
+      <p class='fecha-reto'>04 de agosto</p>
+      <a href="#" class='iniciar-reto'>Jugar</a>
+    </div>
+    <div class="reto reto-semanal">
+      <h3 class="titulo-reto">Reto Semanal</h3>
+      <p class='fecha-reto'>03 al 09 de agosto</p>
+      <a href="#" class='iniciar-reto'>Jugar</a>
+    </div>
+  </div>
+
 </body>
 </html>
