Estilos basicos a el titulo del tablero

--- a/pages/retoDiario.html
+++ b/pages/retoDiario.html
@@ -46,11 +46,12 @@
 
   <div class="tablero">
     <div class="informacion-tablero">
-
+      <p class="dificultad-tablero">Dificultad:<span>Facil</span></p>
+      <h3 class='titulo-tablero'>Reto Diario</h3>
+      <p class="tiempo-tablero">Tiempo restante:<span>01:17</span></p>
     </div>
     <div class="carta">
       <div class="lado frente">
-
       </div>
       <div class="lado atras">
         <div class="ovalo"></div>
