--- a/pages/retoDiario.html
+++ b/pages/retoDiario.html
@@ -11,7 +11,7 @@
 <body>
 
   <!--Menu-->
-  <ul class="menu">
+  <!-- <ul class="menu">
     <li class='menu-selected'>
       <a href="#">
         <i class="fas fa-home"></i>
@@ -42,110 +42,20 @@
         <span>Personal</span>
       </a>
     </li>
-  </ul>
+  </ul> -->
 
-  <div class="tablero">
-    <div class="informacion-tablero">
-      <p class="dificultad-tablero">Dificultad:<span>Facil</span></p>
-      <h3 class='titulo-tablero'>Reto Diario</h3>
-      <p class="tiempo-tablero">Tiempo restante:<span>01:17</span></p>
-    </div>
-    <div class="carta">
+  <div class="tablero" id='tablero'>
+    <!-- <div class="carta">
       <div class="lado frente">
       </div>
       <div class="lado atras">
         <div class="ovalo"></div>
       </div>
-    </div>
-    <div class="carta">
-      <div class="lado frente">
-
-      </div>
-      <div class="lado atras">
-        <div class="ovalo"></div>
-      </div>
-    </div>
-    <div class="carta">
-      <div class="lado frente">
-
-      </div>
-      <div class="lado atras">
-        <div class="ovalo"></div>
-      </div>
-    </div>
-    <div class="carta">
-      <div class="lado frente">
-
-      </div>
-      <div class="lado atras">
-        <div class="ovalo"></div>
-      </div>
-    </div>
-    <div class="carta">
-      <div class="lado frente">
-
-      </div>
-      <div class="lado atras">
-        <div class="ovalo"></div>
-      </div>
-    </div>
-    <div class="carta">
-      <div class="lado frente">
-
-      </div>
-      <div class="lado atras">
-        <div class="ovalo"></div>
-      </div>
-    </div>
-    <div class="carta">
-      <div class="lado frente">
-
-      </div>
-      <div class="lado atras">
-        <div class="ovalo"></div>
-      </div>
-    </div>
-    <div class="carta">
-      <div class="lado frente">
-
-      </div>
-      <div class="lado atras">
-        <div class="ovalo"></div>
-      </div>
-    </div>
-    <div class="carta">
-      <div class="lado frente">
-
-      </div>
-      <div class="lado atras">
-        <div class="ovalo"></div>
-      </div>
-    </div>
-    <div class="carta">
-      <div class="lado frente">
-
-      </div>
-      <div class="lado atras">
-        <div class="ovalo"></div>
-      </div>
-    </div>
-    <div class="carta">
-      <div class="lado frente">
-
-      </div>
-      <div class="lado atras">
-        <div class="ovalo"></div>
-      </div>
-    </div>
-    <div class="carta">
-      <div class="lado frente">
-
-      </div>
-      <div class="lado atras">
-        <div class="ovalo"></div>
-      </div>
-    </div>
+    </div> -->
   </div>
+
+  <script src="../js/jquery.js"></script>
+  <script src="../js/logicaDelJuego.js"></script>
 
 </body>
 </html>
