Dos modos de cartas(colores y numeros)

--- a/index.html
+++ b/index.html
@@ -48,15 +48,18 @@
   <div class='modo-recomendado'>
     <div class="reto reto-diario">
       <h3 class="titulo-reto">Reto Diario</h3>
-      <p class='fecha-reto'>04 de agosto</p>
-      <a href="#" class='iniciar-reto'>Jugar</a>
+      <p class='fecha-reto' id='fechaHoy'></p>
+      <a href="./pages/retoDiario.html" class='iniciar-reto'>Jugar</a>
     </div>
     <div class="reto reto-semanal">
       <h3 class="titulo-reto">Reto Semanal</h3>
-      <p class='fecha-reto'>03 al 09 de agosto</p>
-      <a href="#" class='iniciar-reto'>Jugar</a>
+      <p class='fecha-reto' id='fechaSemana'></p>
+      <a href="./pages/retoSemanal.html" class='iniciar-reto'>Jugar</a>
     </div>
   </div>
+
+  <script src="./js/jquery.js"></script>
+  <script src="./js/fechas.js"></script>
 
 </body>
 </html>
